# Cloak

./: .gitignore  README.md  cloak.ts  extension.ts  metadata.json  package-lock.json  package.json  tsconfig.json
.github/: update-tags.yaml
.github/update-tags/: action.yaml
.github/workflows/: release-client.yaml  release-gnome.yaml  release.yaml
client/: .gitignore  README.md  pyproject.toml
client/src/lookout/: __init__.py  args.py  dbus.py
gnome/cloak@mirolang.org/: .gitignore  cloak.ts  extension.ts  makefile  metadata.json  package-lock.json  package.json  prefs.ts  tsconfig.json
gnome/cloak@mirolang.org/schemas/: gschemas.compiled  org.gnome.shell.extensions.cloak.gschema.xml  org.mirolang.Cloak.xml  org.mirolang.Lookout.xml
schemas/: org.gnome.shell.extensions.lookout.gschema.xml
