[project]
name = "lookout"
version = "0.1.0"
description = "lookout zigbee gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiostream>=0.7.1", "zha>=1.4.1"]

[project.scripts]
lookout = "lookout:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
